Mostly finished styling

--- a/app/styles/_components.sass
+++ b/app/styles/_components.sass
@@ -7,5 +7,6 @@
 @import app/pods/components/project-group/style
 @import app/pods/components/sec-tion/style
 @import app/pods/components/star-button/style
+@import app/pods/components/time-line/style
 
 @import app/pods/locale/index/style
