--- a/app/styles/config/themes/dark.sass
+++ b/app/styles/config/themes/dark.sass
@@ -1,2 +1,11 @@
-+config-set('lolma-us.themes.dark.bg1',  #152b2b)
-+config-set('lolma-us.themes.dark.text', white)
++config-set('lolma-us.themes.dark.bg1',           #0C0C0C)
++config-set('lolma-us.themes.dark.text',          #C9E9D3)
++config-set('lolma-us.themes.dark.bold',          #b2cfbb)
++config-set('lolma-us.themes.dark.label',         #AA9A66)
++config-set('lolma-us.themes.dark.heading1',      #B74934)
++config-set('lolma-us.themes.dark.heading2',      config-get('lolma-us.themes.dar.bold'))
++config-set('lolma-us.themes.dark.link.link',     #89b9e1)
++config-set('lolma-us.themes.dark.link.disabled', config-get('lolma-us.themes.dar.bold'))
++config-set('lolma-us.themes.dark.link.hover',    lighten(config-get('lolma-us.themes.dark.link.link'), 10%))
++config-set('lolma-us.themes.dark.link.active',   lighten(config-get('lolma-us.themes.dark.link.link'), 10%))
++config-set('lolma-us.themes.dark.link.visited',  darken(config-get('lolma-us.themes.dark.link.link'),  10%))
