--- a/app/styles/config/themes/light.sass
+++ b/app/styles/config/themes/light.sass
@@ -1,2 +1,11 @@
-+config-set('lolma-us.themes.light.bg1',  white)
-+config-set('lolma-us.themes.light.text', darkslategrey)
++config-set('lolma-us.themes.light.bg1',           white)
++config-set('lolma-us.themes.light.text',          #67655D)
++config-set('lolma-us.themes.light.bold',          #332C2F)
++config-set('lolma-us.themes.light.label',         #AA9A66)
++config-set('lolma-us.themes.light.heading1',      #B74934)
++config-set('lolma-us.themes.light.heading2',      config-get('lolma-us.themes.light.bold'))
++config-set('lolma-us.themes.light.link.link',     #577492)
++config-set('lolma-us.themes.light.link.disabled', config-get('lolma-us.themes.light.bold'))
++config-set('lolma-us.themes.light.link.hover',    lighten(config-get('lolma-us.themes.light.link.link'), 10%))
++config-set('lolma-us.themes.light.link.active',   lighten(config-get('lolma-us.themes.light.link.link'), 10%))
++config-set('lolma-us.themes.light.link.visited',  darken(config-get('lolma-us.themes.light.link.link'),  10%))
