--- a/app/styles/helpers/copy.sass
+++ b/app/styles/helpers/copy.sass
@@ -1,8 +1,8 @@
-@import header-sizes
+@import headings
 
 =copy
 
-  +header-sizes
+  +heading-sizes
 
   b, strong
     font-weight: bold
@@ -15,6 +15,8 @@
       margin-bottom: 1em
 
   h1, h2, h3, h4, h5, h6
+    font-weight: bold
+
     &:not(:first-child)
       margin-top: 1em
 
