--- a/app/templates/head.hbs
+++ b/app/templates/head.hbs
@@ -1,9 +1,10 @@
-{{!-- 
+{{!--
   Add content you wish automatically added to the documents head
   here. The 'model' available in this template can be populated by
-  setting values on the 'head-data' service. 
+  setting values on the 'head-data' service.
 --}}
 
+<link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption|PT+Sans:400,400i,700&amp;subset=cyrillic" rel="stylesheet">
 
 {{#if model.redirectToEn}}
   <meta http-equiv="refresh" content="0; url=/en" />
