Page title, fixed background

--- a/app/templates/head.hbs
+++ b/app/templates/head.hbs
@@ -4,6 +4,8 @@
   setting values on the 'head-data' service.
 --}}
 
+<title>{{model.title}}</title>
+
 <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption|PT+Sans:400,400i,700&amp;subset=cyrillic" rel="stylesheet">
 
 {{#if model.redirectToEn}}
