Pure CSS off-screen menu! Fixes #2. Also added external link icon.

--- a/app/styles/_components.sass
+++ b/app/styles/_components.sass
@@ -9,4 +9,5 @@
 @import app/pods/components/star-button/style
 @import app/pods/components/time-line/style
 
+@import app/pods/locale/style
 @import app/pods/locale/index/style
