--- a/app/styles/_global.sass
+++ b/app/styles/_global.sass
@@ -13,3 +13,8 @@ body
 
 h1, h2, h3, h4, h5, h6
   font-family: 'PT Sans Caption', sans-serif
+
+a[target="_blank"]:not(.-no-icon), .externalLink
+  padding-right:   1rem
+  background:      url('/images/icons/external-link.png') right center no-repeat transparent
+  background-size: 12px 12px
