--- a/app/styles/_config.sass
+++ b/app/styles/_config.sass
@@ -1,5 +1,6 @@
 @import node_modules/sass-config-manager-mk2/config-manager
 
 @import config/breakpoints
+@import config/layout
 @import config/themes
 
