--- a/app/styles/_components.sass
+++ b/app/styles/_components.sass
@@ -1,3 +1,4 @@
+@import app/pods/components/blog-post/style
 @import app/pods/components/hero-header/style
 @import app/pods/components/markdown-block/style
 @import app/pods/components/online-presence/style
@@ -11,3 +12,5 @@
 @import app/pods/locale/style
 @import app/pods/locale/index/style
 @import app/pods/locale/blog/style
+@import app/pods/locale/blog/index/style
+@import app/pods/locale/blog/post/style
