--- a/app/styles/_global.sass
+++ b/app/styles/_global.sass
@@ -7,12 +7,13 @@
 
 body
   +theme(light)
-  font-family: 'PT Sans', sans-serif
-  line-height: 1.3
+  font-family: Merriweather, serif
+  line-height: 1.5
 
 
 h1, h2, h3, h4, h5, h6
   font-family: 'PT Sans Caption', sans-serif
+  line-height: 1.2
 
 a[href^="http"]:not(.-no-icon), .externalLink
   padding-right:   1rem
