--- a/app/templates/head.hbs
+++ b/app/templates/head.hbs
@@ -6,7 +6,7 @@
 
 <title>{{model.title}}</title>
 
-<link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption|PT+Sans:400,400i,700&amp;subset=cyrillic" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption|Merriweather:400,400i,700&amp;subset=cyrillic" rel="stylesheet">
 
 {{#if model.redirectToEn}}
   <meta http-equiv="refresh" content="0; url=/en" />
