Collapse off-screen menu on item click, fixes #12

--- a/app/styles/_components.sass
+++ b/app/styles/_components.sass
@@ -6,6 +6,7 @@
 @import app/pods/components/pro-jects/style
 @import app/pods/components/project-group/style
 @import app/pods/components/sec-tion/style
+@import app/pods/components/side-menu/style
 @import app/pods/components/star-button/style
 @import app/pods/components/time-line/style
 
