--- a/app/styles/config/themes/red.sass
+++ b/app/styles/config/themes/red.sass
@@ -1,4 +1,5 @@
 +config-set('lolma-us.themes.red.bg1',           #B74934)
++config-set('lolma-us.themes.red.bg-slight',     #b7755e)
 +config-set('lolma-us.themes.red.text',          white)
 +config-set('lolma-us.themes.red.bold',          #f5ddef)
 +config-set('lolma-us.themes.red.label',         #AA9A66)
