--- a/app/styles/helpers/theme.sass
+++ b/app/styles/helpers/theme.sass
@@ -39,3 +39,6 @@
         width:    100%
         box-shadow:    0 0 1px   config-get("lolma-us.themes.#{$theme-name}.heading1")
         border-bottom: 1px solid config-get("lolma-us.themes.#{$theme-name}.heading1")
+
+  *:not(pre) > code
+    background-color: config-get("lolma-us.themes.#{$theme-name}.bg-slight")
