--- a/app/styles/config/themes/dark.sass
+++ b/app/styles/config/themes/dark.sass
@@ -1,4 +1,5 @@
 +config-set('lolma-us.themes.dark.bg1',           #0C0C0C)
++config-set('lolma-us.themes.dark.bg-slight',     rgba(0, 0, 0, 0.78))
 +config-set('lolma-us.themes.dark.bg2',           #555451)
 +config-set('lolma-us.themes.dark.text',          #C9E9D3)
 +config-set('lolma-us.themes.dark.bold',          #b2cfbb)
