--- a/app/styles/config/themes/light.sass
+++ b/app/styles/config/themes/light.sass
@@ -1,4 +1,5 @@
 +config-set('lolma-us.themes.light.bg1',           white)
++config-set('lolma-us.themes.light.bg-slight',     rgba(0,0,0,0.04))
 +config-set('lolma-us.themes.light.text',          #67655D)
 +config-set('lolma-us.themes.light.bold',          #332C2F)
 +config-set('lolma-us.themes.light.label',         #AA9A66)
