Blog post: "Do return hash from model hook", fixes #20

--- a/app/styles/helpers/copy.sass
+++ b/app/styles/helpers/copy.sass
@@ -61,7 +61,7 @@
       opacity:    0.5
 
   blockquote:before
-      content: '”'
+    content: '”'
 
-  aside:before
-      content: '!'
+  aside:before, .exclamation + blockquote:before
+    content: '!'
