Tune blog post route layout, fixes #21

--- a/app/styles/helpers/copy.sass
+++ b/app/styles/helpers/copy.sass
@@ -47,14 +47,15 @@
       padding: 1rem !important
 
   blockquote, aside
-    padding-left: 3em
-    position:     relative
-    font-style:   italic
-    opacity:      0.9
+    padding-left:  3em
+    padding-right: 3em
+    position:      relative
+    font-style:    italic
+    opacity:       0.9
 
     &:before
       position:   absolute
-      top:        0
+      top:        -0.2em
       left:       0
       font-size:  4em
       font-style: normal
