--- a/app/templates/head.hbs
+++ b/app/templates/head.hbs
@@ -9,5 +9,5 @@
 <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption|Merriweather:400,400i,700&amp;subset=cyrillic" rel="stylesheet">
 
 {{#if model.redirectToEn}}
-  <meta http-equiv="refresh" content="0; url=/en" />
+  <meta http-equiv="refresh" content="0; url=/en/blog/" />
 {{/if}}
