--- a/app/styles/helpers/theme.sass
+++ b/app/styles/helpers/theme.sass
@@ -42,3 +42,6 @@
 
   *:not(pre) > code
     background-color: config-get("lolma-us.themes.#{$theme-name}.bg-slight")
+
+  blockquote, aside
+    color: config-get("lolma-us.themes.#{$theme-name}.label")
