JSON-LD Schema.org metadata

--- a/app/templates/head.hbs
+++ b/app/templates/head.hbs
@@ -9,3 +9,9 @@
 {{#if model.redirectToEn}}
   <meta http-equiv="refresh" content="0; url=/en/blog/" />
 {{/if}}
+  {{log 'model' model}}
+{{#if model.linkedData}}
+  <script type="application/ld+json">
+    {{~json-stringify model.linkedData~}}
+  </script>
+{{/if}}
