--- a/app/styles/_global.sass
+++ b/app/styles/_global.sass
@@ -19,3 +19,15 @@ a[href^="http"]:not(.-no-icon), .externalLink
   padding-right:   1rem
   background:      url('/images/icons/external-link.png') right center no-repeat transparent
   background-size: 12px 12px
+
+.headingWithLink
+  position: relative
+
+.headingWithLink-link
+  position:      absolute
+  right:         100%
+  padding-right: 0.1em
+  display:       none
+
+  .headingWithLink:hover &
+    display: block
