--- a/app/templates/head.hbs
+++ b/app/templates/head.hbs
@@ -14,6 +14,7 @@
 {{! og:locale }}
 {{#if model.model.locale}}
   <meta property="og:locale" content={{model.model.locale}}>
+  <link rel="alternate" type="application/rss+xml" href="https://lolma.us/rss_{{model.model.locale}}.xml">
 {{/if}}
 
 {{! og:description }}
